content/_generated-doc/2.7/config/quarkus-kubernetes-config-group-auto-scaling-config.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-kubernetes-config-group-auto-scaling-config_configuration]]link:#quarkus-kubernetes-config-group-auto-scaling-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-auto-scaling-config_quarkus.knative.revision-auto-scaling.auto-scaler-class]]`link:#quarkus-kubernetes-config-group-auto-scaling-config_quarkus.knative.revision-auto-scaling.auto-scaler-class[quarkus.knative.revision-auto-scaling.auto-scaler-class]`

[.description]
--

--|`kpa`, `hpa` 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-auto-scaling-config_quarkus.knative.revision-auto-scaling.metric]]`link:#quarkus-kubernetes-config-group-auto-scaling-config_quarkus.knative.revision-auto-scaling.metric[quarkus.knative.revision-auto-scaling.metric]`

[.description]
--

--|`concurrency`, `rps`, `cpu` 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-auto-scaling-config_quarkus.knative.revision-auto-scaling.target]]`link:#quarkus-kubernetes-config-group-auto-scaling-config_quarkus.knative.revision-auto-scaling.target[quarkus.knative.revision-auto-scaling.target]`

[.description]
--

--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-auto-scaling-config_quarkus.knative.revision-auto-scaling.container-concurrency]]`link:#quarkus-kubernetes-config-group-auto-scaling-config_quarkus.knative.revision-auto-scaling.container-concurrency[quarkus.knative.revision-auto-scaling.container-concurrency]`

[.description]
--

--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-auto-scaling-config_quarkus.knative.revision-auto-scaling.target-utilization-percentage]]`link:#quarkus-kubernetes-config-group-auto-scaling-config_quarkus.knative.revision-auto-scaling.target-utilization-percentage[quarkus.knative.revision-auto-scaling.target-utilization-percentage]`

[.description]
--

--|int 
|

|===