content/_generated-doc/3.6/config/quarkus-kubernetes-config-group-auto-scaling-config.adoc

:summaryTableId: quarkus-kubernetes-config-group-auto-scaling-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-kubernetes-config-group-auto-scaling-config_configuration]]link:#quarkus-kubernetes-config-group-auto-scaling-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-auto-scaling-config_quarkus.knative.revision-auto-scaling.auto-scaler-class]]`link:#quarkus-kubernetes-config-group-auto-scaling-config_quarkus.knative.revision-auto-scaling.auto-scaler-class[quarkus.knative.revision-auto-scaling.auto-scaler-class]`


[.description]
--
The Autoscaler class. Knative Serving comes with its own autoscaler, the KPA (Knative Pod Autoscaler) but can also be configured to use Kubernetes’ HPA (Horizontal Pod Autoscaler) or even a custom third-party autoscaler. Possible values (kpa, hpa, default: kpa).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KNATIVE_REVISION_AUTO_SCALING_AUTO_SCALER_CLASS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KNATIVE_REVISION_AUTO_SCALING_AUTO_SCALER_CLASS+++`
endif::add-copy-button-to-env-var[]
-- a|
`kpa`, `hpa` 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-auto-scaling-config_quarkus.knative.revision-auto-scaling.metric]]`link:#quarkus-kubernetes-config-group-auto-scaling-config_quarkus.knative.revision-auto-scaling.metric[quarkus.knative.revision-auto-scaling.metric]`


[.description]
--
The autoscaling metric to use. Possible values (concurrency, rps, cpu).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KNATIVE_REVISION_AUTO_SCALING_METRIC+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KNATIVE_REVISION_AUTO_SCALING_METRIC+++`
endif::add-copy-button-to-env-var[]
-- a|
`concurrency`, `rps`, `cpu` 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-auto-scaling-config_quarkus.knative.revision-auto-scaling.target]]`link:#quarkus-kubernetes-config-group-auto-scaling-config_quarkus.knative.revision-auto-scaling.target[quarkus.knative.revision-auto-scaling.target]`


[.description]
--
The autoscaling target.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KNATIVE_REVISION_AUTO_SCALING_TARGET+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KNATIVE_REVISION_AUTO_SCALING_TARGET+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-auto-scaling-config_quarkus.knative.revision-auto-scaling.container-concurrency]]`link:#quarkus-kubernetes-config-group-auto-scaling-config_quarkus.knative.revision-auto-scaling.container-concurrency[quarkus.knative.revision-auto-scaling.container-concurrency]`


[.description]
--
The exact amount of requests allowed to the replica at a time. Its default value is “0”, which means an unlimited number of requests are allowed to flow into the replica.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KNATIVE_REVISION_AUTO_SCALING_CONTAINER_CONCURRENCY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KNATIVE_REVISION_AUTO_SCALING_CONTAINER_CONCURRENCY+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-auto-scaling-config_quarkus.knative.revision-auto-scaling.target-utilization-percentage]]`link:#quarkus-kubernetes-config-group-auto-scaling-config_quarkus.knative.revision-auto-scaling.target-utilization-percentage[quarkus.knative.revision-auto-scaling.target-utilization-percentage]`


[.description]
--
This value specifies a percentage of the target to actually be targeted by the autoscaler.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KNATIVE_REVISION_AUTO_SCALING_TARGET_UTILIZATION_PERCENTAGE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KNATIVE_REVISION_AUTO_SCALING_TARGET_UTILIZATION_PERCENTAGE+++`
endif::add-copy-button-to-env-var[]
--|int 
|

|===